Moved bash to scripts
Signed-off-by: Jose Castillo Lema <josecastillolema@gmail.com>

--- a/ci-operator/step-registry/openshift-qe/installer/bm/foreman/openshift-qe-installer-bm-foreman-ref.yaml
+++ b/ci-operator/step-registry/openshift-qe/installer/bm/foreman/openshift-qe-installer-bm-foreman-ref.yaml
@@ -18,6 +18,10 @@ ref:
       default: "RHEL 8.6"
       documentation: |-
         Operational System to build though Foreman
+    - name: LAB
+      default: "performancelab"
+      documentation: |-
+        Lab where the hardware is located. Either performancelab or scalelab
     - name: LAB_CLOUD
       default: "cloud31"
       documentation: |-
@@ -26,10 +30,6 @@ ref:
       default: "1"
       documentation: |-
         Number of nodes to deploy via Foreman
-    - name: QUADS_INSTANCE
-      default: "http://quads.rdu3.labs.perfscale.redhat.com"
-      documentation: |-
-        QUADS instance to download the inventory file from
     - name: STARTING_NODE
       default: "4"
       documentation: |-
