--- a/ci-operator/step-registry/openshift-qe/installer/bm/foreman/openshift-qe-installer-bm-foreman-workflow.yaml
+++ b/ci-operator/step-registry/openshift-qe/installer/bm/foreman/openshift-qe-installer-bm-foreman-workflow.yaml
@@ -4,4 +4,4 @@ workflow:
     test:
     - chain: openshift-qe-installer-bm-foreman
   documentation: |-
-    Ping a node to ensure connectivity.
+    Deploy some host(s) using Foreman
